--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,57 +1,86 @@
 # 2023-11-02
 
-共 147 条
+共 175 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 11:00:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 12:00:42 GMT+0800 (China Standard Time) -->
 1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
-1. [河南通报“农村立火聚餐就要办证”](https://so.toutiao.com/search?keyword=河南通报“农村立火聚餐就要办证”)
+1. [主持人评村民抢药材：损失谁来负](https://so.toutiao.com/search?keyword=主持人评村民抢药材：损失谁来负)
 1. [神十六返回舱进入大气层壮观画面](https://so.toutiao.com/search?keyword=神十六返回舱进入大气层壮观画面)
-1. [茅台涨价巨大价差落到谁口袋](https://so.toutiao.com/search?keyword=茅台涨价巨大价差落到谁口袋)
+1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
 1. [支原体肺炎“三件套”真的管用吗](https://so.toutiao.com/search?keyword=支原体肺炎“三件套”真的管用吗)
+1. [谁是33万亿美元美国国债头号债主](https://so.toutiao.com/search?keyword=谁是33万亿美元美国国债头号债主)
+1. [糖尿病家属谈治疗：1天打4遍胰岛素](https://so.toutiao.com/search?keyword=糖尿病家属谈治疗：1天打4遍胰岛素)
+1. [日本开始第三轮核污染水排海](https://so.toutiao.com/search?keyword=日本开始第三轮核污染水排海)
+1. [离世女教师加班数石榴系谣言](https://so.toutiao.com/search?keyword=离世女教师加班数石榴系谣言)
+1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [哈马斯称用机枪对加沙以军还击](https://so.toutiao.com/search?keyword=哈马斯称用机枪对加沙以军还击)
+1. [多国对以色列展开“外交攻势”](https://so.toutiao.com/search?keyword=多国对以色列展开“外交攻势”)
+1. [伊朗最高领袖就巴以冲突发声](https://so.toutiao.com/search?keyword=伊朗最高领袖就巴以冲突发声)
+1. [胡锡进谈教师自杀：形式主义让人疯掉](https://so.toutiao.com/search?keyword=胡锡进谈教师自杀：形式主义让人疯掉)
+1. [加沙81名重伤者将前往埃及接受治疗](https://so.toutiao.com/search?keyword=加沙81名重伤者将前往埃及接受治疗)
+1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
+1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
+1. [黎巴嫩真主党发公开信声援哈马斯](https://so.toutiao.com/search?keyword=黎巴嫩真主党发公开信声援哈马斯)
+1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
+1. [专家：农业污染不能一禁了之](https://so.toutiao.com/search?keyword=专家：农业污染不能一禁了之)
+1. [快船总裁：很高兴能聚齐登威卡椒](https://so.toutiao.com/search?keyword=快船总裁：很高兴能聚齐登威卡椒)
+1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
+1. [446万资金原主不明警方公告寻人](https://so.toutiao.com/search?keyword=446万资金原主不明警方公告寻人)
+1. [家长怒斥放号多致孩子看病等太久](https://so.toutiao.com/search?keyword=家长怒斥放号多致孩子看病等太久)
+1. [男子自称收留女孩被控强奸获刑10年](https://so.toutiao.com/search?keyword=男子自称收留女孩被控强奸获刑10年)
+1. [俄军：20天就能击落乌克兰所有F-16](https://so.toutiao.com/search?keyword=俄军：20天就能击落乌克兰所有F-16)
+1. [蓝白合明天是最后期限？侯友宜表态](https://so.toutiao.com/search?keyword=蓝白合明天是最后期限？侯友宜表态)
+1. [埃及外长呼吁保护巴勒斯坦平民生命](https://so.toutiao.com/search?keyword=埃及外长呼吁保护巴勒斯坦平民生命)
+1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
+1. [飞机滑行时孩子起立家长被空姐教育](https://so.toutiao.com/search?keyword=飞机滑行时孩子起立家长被空姐教育)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [武汉江汉区政协原主席许华被查](https://so.toutiao.com/search?keyword=武汉江汉区政协原主席许华被查)
+1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
+1. [第二例接受猪心脏移植者去世](https://so.toutiao.com/search?keyword=第二例接受猪心脏移植者去世)
+1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
+1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
+1. [身高1米45嫌犯潜逃照片公布](https://so.toutiao.com/search?keyword=身高1米45嫌犯潜逃照片公布)
+1. [约旦建议本国公民暂勿前往黎巴嫩](https://so.toutiao.com/search?keyword=约旦建议本国公民暂勿前往黎巴嫩)
+1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
+1. [男子操作失误被追尾与后车同责](https://so.toutiao.com/search?keyword=男子操作失误被追尾与后车同责)
+1. [WTT法兰克福冠军赛：王楚钦晋级8强](https://so.toutiao.com/search?keyword=WTT法兰克福冠军赛：王楚钦晋级8强)
+1. [国际油价11月1日下跌](https://so.toutiao.com/search?keyword=国际油价11月1日下跌)
+1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
+1. [网传部分用户将学校挂上闲鱼](https://so.toutiao.com/search?keyword=网传部分用户将学校挂上闲鱼)
+1. [洪秀柱：愿望是两岸尽快和平统一](https://so.toutiao.com/search?keyword=洪秀柱：愿望是两岸尽快和平统一)
+1. [年轻教师与曾经的老师成为了同事](https://so.toutiao.com/search?keyword=年轻教师与曾经的老师成为了同事)
+1. [外媒民调梅西是否是历史最佳球员](https://so.toutiao.com/search?keyword=外媒民调梅西是否是历史最佳球员)
+1. [专家称这些家庭容易培养出霸凌者](https://so.toutiao.com/search?keyword=专家称这些家庭容易培养出霸凌者)
+1. [约旦国王访问阿联酋](https://so.toutiao.com/search?keyword=约旦国王访问阿联酋)
+1. [布达拉宫明年3月15日前免费参观](https://so.toutiao.com/search?keyword=布达拉宫明年3月15日前免费参观)
+1. [河南通报“农村立火聚餐就要办证”](https://so.toutiao.com/search?keyword=河南通报“农村立火聚餐就要办证”)
+1. [茅台涨价巨大价差落到谁口袋](https://so.toutiao.com/search?keyword=茅台涨价巨大价差落到谁口袋)
 1. [专家：美国“多线出击”陷外交危机](https://so.toutiao.com/search?keyword=专家：美国“多线出击”陷外交危机)
 1. [湖北大学回应情侣校园内被人骚扰](https://so.toutiao.com/search?keyword=湖北大学回应情侣校园内被人骚扰)
-1. [第二例接受猪心脏移植者去世](https://so.toutiao.com/search?keyword=第二例接受猪心脏移植者去世)
-1. [离世女教师加班数石榴系谣言](https://so.toutiao.com/search?keyword=离世女教师加班数石榴系谣言)
 1. [刘震云：指手画脚是知识不够的表现](https://so.toutiao.com/search?keyword=刘震云：指手画脚是知识不够的表现)
-1. [哈马斯称用机枪对加沙以军还击](https://so.toutiao.com/search?keyword=哈马斯称用机枪对加沙以军还击)
 1. [怎么看上海万圣节中国化现象](https://so.toutiao.com/search?keyword=怎么看上海万圣节中国化现象)
-1. [伊朗最高领袖就巴以冲突发声](https://so.toutiao.com/search?keyword=伊朗最高领袖就巴以冲突发声)
 1. [以军回应空袭难民营：他们自己不走](https://so.toutiao.com/search?keyword=以军回应空袭难民营：他们自己不走)
 1. [女老师留遗书自杀前一天疑遭校长批评](https://so.toutiao.com/search?keyword=女老师留遗书自杀前一天疑遭校长批评)
 1. [外媒：哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=外媒：哈马斯发布“地道作战”视频)
-1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
-1. [胡锡进谈教师自杀：形式主义让人疯掉](https://so.toutiao.com/search?keyword=胡锡进谈教师自杀：形式主义让人疯掉)
 1. [也门胡塞武装：将继续对以发动袭击](https://so.toutiao.com/search?keyword=也门胡塞武装：将继续对以发动袭击)
 1. [美国国务卿将再次访问以色列与约旦](https://so.toutiao.com/search?keyword=美国国务卿将再次访问以色列与约旦)
-1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
 1. [WTT法兰克福冠军赛：陈梦出局](https://so.toutiao.com/search?keyword=WTT法兰克福冠军赛：陈梦出局)
 1. [美洲际导弹试射时突发异常被迫引爆](https://so.toutiao.com/search?keyword=美洲际导弹试射时突发异常被迫引爆)
-1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
 1. [茅台涨价20%谁会获利](https://so.toutiao.com/search?keyword=茅台涨价20%谁会获利)
 1. [退休标准到底是什么](https://so.toutiao.com/search?keyword=退休标准到底是什么)
-1. [年轻教师与曾经的老师成为了同事](https://so.toutiao.com/search?keyword=年轻教师与曾经的老师成为了同事)
-1. [网传部分用户将学校挂上闲鱼](https://so.toutiao.com/search?keyword=网传部分用户将学校挂上闲鱼)
 1. [WTT法兰克福冠军赛：王艺迪晋级](https://so.toutiao.com/search?keyword=WTT法兰克福冠军赛：王艺迪晋级)
 1. [北方多地最高气温突破11月极值](https://so.toutiao.com/search?keyword=北方多地最高气温突破11月极值)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
 1. [专家：香山论坛未来将发挥更大作用](https://so.toutiao.com/search?keyword=专家：香山论坛未来将发挥更大作用)
-1. [身高1米45嫌犯潜逃照片公布](https://so.toutiao.com/search?keyword=身高1米45嫌犯潜逃照片公布)
 1. [美无力同时支持以色列乌克兰](https://so.toutiao.com/search?keyword=美无力同时支持以色列乌克兰)
-1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
 1. [媒体：严控老头乐带不走老头“乐”](https://so.toutiao.com/search?keyword=媒体：严控老头乐带不走老头“乐”)
 1. [WTT法兰克福冠军赛今日赛程](https://so.toutiao.com/search?keyword=WTT法兰克福冠军赛今日赛程)
-1. [飞机滑行时孩子起立家长被空姐教育](https://so.toutiao.com/search?keyword=飞机滑行时孩子起立家长被空姐教育)
 1. [女子花2月学母亲给儿子织1.2米毛衣](https://so.toutiao.com/search?keyword=女子花2月学母亲给儿子织1.2米毛衣)
 1. [联合国一机构70名员工死于巴以冲突](https://so.toutiao.com/search?keyword=联合国一机构70名员工死于巴以冲突)
-1. [专家称这些家庭容易培养出霸凌者](https://so.toutiao.com/search?keyword=专家称这些家庭容易培养出霸凌者)
 1. [安踏回应ANTA是拼音还是英文](https://so.toutiao.com/search?keyword=安踏回应ANTA是拼音还是英文)
 1. [风电巨头Orsted取消两个风电项目](https://so.toutiao.com/search?keyword=风电巨头Orsted取消两个风电项目)
-1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
 1. [《下一站幸福》导演陈慧翎去世](https://so.toutiao.com/search?keyword=《下一站幸福》导演陈慧翎去世)
 1. [全球风电“巨无霸”沃旭能源爆雷](https://so.toutiao.com/search?keyword=全球风电“巨无霸”沃旭能源爆雷)
-1. [多国对以色列展开“外交攻势”](https://so.toutiao.com/search?keyword=多国对以色列展开“外交攻势”)
-1. [埃及外长呼吁保护巴勒斯坦平民生命](https://so.toutiao.com/search?keyword=埃及外长呼吁保护巴勒斯坦平民生命)
 1. [哈登表示永远不会再和76人总裁说话](https://so.toutiao.com/search?keyword=哈登表示永远不会再和76人总裁说话)
 1. [曝塔克有望出战今日对阵湖人比赛](https://so.toutiao.com/search?keyword=曝塔克有望出战今日对阵湖人比赛)
 1. [农村只要立火聚餐就要办证？河南通报](https://so.toutiao.com/search?keyword=农村只要立火聚餐就要办证？河南通报)
@@ -82,7 +111,6 @@
 1. [老马丁：已提前知道我儿子被交易](https://so.toutiao.com/search?keyword=老马丁：已提前知道我儿子被交易)
 1. [市监局突袭检查菜市场发现缺斤少两](https://so.toutiao.com/search?keyword=市监局突袭检查菜市场发现缺斤少两)
 1. [WTT冠军赛：梁靖崑无缘八强](https://so.toutiao.com/search?keyword=WTT冠军赛：梁靖崑无缘八强)
-1. [谁是33万亿美元美国国债头号债主](https://so.toutiao.com/search?keyword=谁是33万亿美元美国国债头号债主)
 1. [加沙唯一一家治疗癌症医院停止运营](https://so.toutiao.com/search?keyword=加沙唯一一家治疗癌症医院停止运营)
 1. [拉美三国为何想与以色列断交](https://so.toutiao.com/search?keyword=拉美三国为何想与以色列断交)
 1. [媒体：坚决不能让老百姓的票子变毛](https://so.toutiao.com/search?keyword=媒体：坚决不能让老百姓的票子变毛)
