--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,57 +1,82 @@
 # 2023-11-02
 
-共 175 条
+共 197 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 12:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 13:00:35 GMT+0800 (China Standard Time) -->
 1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
 1. [主持人评村民抢药材：损失谁来负](https://so.toutiao.com/search?keyword=主持人评村民抢药材：损失谁来负)
-1. [神十六返回舱进入大气层壮观画面](https://so.toutiao.com/search?keyword=神十六返回舱进入大气层壮观画面)
-1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
+1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
+1. [中国代表将“鲁班锁”送给联合国](https://so.toutiao.com/search?keyword=中国代表将“鲁班锁”送给联合国)
 1. [支原体肺炎“三件套”真的管用吗](https://so.toutiao.com/search?keyword=支原体肺炎“三件套”真的管用吗)
+1. [美加军舰过航台海 解放军全程跟监](https://so.toutiao.com/search?keyword=美加军舰过航台海+解放军全程跟监)
+1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
+1. [家长怒斥放号多致孩子看病等太久](https://so.toutiao.com/search?keyword=家长怒斥放号多致孩子看病等太久)
+1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
+1. [哈马斯称用机枪对加沙以军还击](https://so.toutiao.com/search?keyword=哈马斯称用机枪对加沙以军还击)
+1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
+1. [伊朗最高领袖就巴以冲突发声](https://so.toutiao.com/search?keyword=伊朗最高领袖就巴以冲突发声)
+1. [以军回应空袭难民营：他们自己不走](https://so.toutiao.com/search?keyword=以军回应空袭难民营：他们自己不走)
+1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
+1. [胡锡进谈教师自杀：形式主义让人疯掉](https://so.toutiao.com/search?keyword=胡锡进谈教师自杀：形式主义让人疯掉)
 1. [谁是33万亿美元美国国债头号债主](https://so.toutiao.com/search?keyword=谁是33万亿美元美国国债头号债主)
+1. [女孩从200斤减到只剩50斤两进ICU](https://so.toutiao.com/search?keyword=女孩从200斤减到只剩50斤两进ICU)
+1. [银川市委原常委李永宁被查](https://so.toutiao.com/search?keyword=银川市委原常委李永宁被查)
+1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
+1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
+1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
+1. [袁素玲任福建省莆田市委副书记](https://so.toutiao.com/search?keyword=袁素玲任福建省莆田市委副书记)
+1. [湖北大学情侣被骚扰事件双方已谅解](https://so.toutiao.com/search?keyword=湖北大学情侣被骚扰事件双方已谅解)
+1. [村委回应老人摆摊被收4000元摊位费](https://so.toutiao.com/search?keyword=村委回应老人摆摊被收4000元摊位费)
+1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
+1. [阿门·汤普森遭遇2级脚踝扭伤](https://so.toutiao.com/search?keyword=阿门·汤普森遭遇2级脚踝扭伤)
+1. [多地气温将陆续跳水](https://so.toutiao.com/search?keyword=多地气温将陆续跳水)
+1. [加州州长：美中“脱钩”不是选择](https://so.toutiao.com/search?keyword=加州州长：美中“脱钩”不是选择)
+1. [赖清德嘲“蓝白合”遭谢寒冰反讽](https://so.toutiao.com/search?keyword=赖清德嘲“蓝白合”遭谢寒冰反讽)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
+1. [阿联酋医院将收治千名巴勒斯坦儿童](https://so.toutiao.com/search?keyword=阿联酋医院将收治千名巴勒斯坦儿童)
+1. [曝华为手机2-3年内会持续供应不足](https://so.toutiao.com/search?keyword=曝华为手机2-3年内会持续供应不足)
+1. [学者：美国正推动自身“霸权更新”](https://so.toutiao.com/search?keyword=学者：美国正推动自身“霸权更新”)
+1. [外媒民调梅西是否是历史最佳球员](https://so.toutiao.com/search?keyword=外媒民调梅西是否是历史最佳球员)
+1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
+1. [游盈隆：对民进党的政治风暴已成形](https://so.toutiao.com/search?keyword=游盈隆：对民进党的政治风暴已成形)
+1. [飞机滑行时孩子起立家长被空姐教育](https://so.toutiao.com/search?keyword=飞机滑行时孩子起立家长被空姐教育)
+1. [身高1米45嫌犯潜逃照片公布](https://so.toutiao.com/search?keyword=身高1米45嫌犯潜逃照片公布)
+1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
 1. [糖尿病家属谈治疗：1天打4遍胰岛素](https://so.toutiao.com/search?keyword=糖尿病家属谈治疗：1天打4遍胰岛素)
+1. [北方多地临近立冬暖如立夏](https://so.toutiao.com/search?keyword=北方多地临近立冬暖如立夏)
+1. [郭台铭连署贿选案已有16人被收押](https://so.toutiao.com/search?keyword=郭台铭连署贿选案已有16人被收押)
+1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
+1. [“蓝白合”台立法机构负责人谁当](https://so.toutiao.com/search?keyword=“蓝白合”台立法机构负责人谁当)
+1. [专家称这些家庭容易培养出霸凌者](https://so.toutiao.com/search?keyword=专家称这些家庭容易培养出霸凌者)
+1. [佩洛西收到检方传票 涉刑事案件](https://so.toutiao.com/search?keyword=佩洛西收到检方传票+涉刑事案件)
+1. [卫健委：提高重大疫情防控应对能力](https://so.toutiao.com/search?keyword=卫健委：提高重大疫情防控应对能力)
+1. [黄金价格受巴以冲突影响暴涨](https://so.toutiao.com/search?keyword=黄金价格受巴以冲突影响暴涨)
+1. [神十六返回舱进入大气层壮观画面](https://so.toutiao.com/search?keyword=神十六返回舱进入大气层壮观画面)
 1. [日本开始第三轮核污染水排海](https://so.toutiao.com/search?keyword=日本开始第三轮核污染水排海)
 1. [离世女教师加班数石榴系谣言](https://so.toutiao.com/search?keyword=离世女教师加班数石榴系谣言)
-1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
-1. [哈马斯称用机枪对加沙以军还击](https://so.toutiao.com/search?keyword=哈马斯称用机枪对加沙以军还击)
 1. [多国对以色列展开“外交攻势”](https://so.toutiao.com/search?keyword=多国对以色列展开“外交攻势”)
-1. [伊朗最高领袖就巴以冲突发声](https://so.toutiao.com/search?keyword=伊朗最高领袖就巴以冲突发声)
-1. [胡锡进谈教师自杀：形式主义让人疯掉](https://so.toutiao.com/search?keyword=胡锡进谈教师自杀：形式主义让人疯掉)
 1. [加沙81名重伤者将前往埃及接受治疗](https://so.toutiao.com/search?keyword=加沙81名重伤者将前往埃及接受治疗)
-1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
-1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
 1. [黎巴嫩真主党发公开信声援哈马斯](https://so.toutiao.com/search?keyword=黎巴嫩真主党发公开信声援哈马斯)
-1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
 1. [专家：农业污染不能一禁了之](https://so.toutiao.com/search?keyword=专家：农业污染不能一禁了之)
 1. [快船总裁：很高兴能聚齐登威卡椒](https://so.toutiao.com/search?keyword=快船总裁：很高兴能聚齐登威卡椒)
-1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
 1. [446万资金原主不明警方公告寻人](https://so.toutiao.com/search?keyword=446万资金原主不明警方公告寻人)
-1. [家长怒斥放号多致孩子看病等太久](https://so.toutiao.com/search?keyword=家长怒斥放号多致孩子看病等太久)
 1. [男子自称收留女孩被控强奸获刑10年](https://so.toutiao.com/search?keyword=男子自称收留女孩被控强奸获刑10年)
 1. [俄军：20天就能击落乌克兰所有F-16](https://so.toutiao.com/search?keyword=俄军：20天就能击落乌克兰所有F-16)
 1. [蓝白合明天是最后期限？侯友宜表态](https://so.toutiao.com/search?keyword=蓝白合明天是最后期限？侯友宜表态)
 1. [埃及外长呼吁保护巴勒斯坦平民生命](https://so.toutiao.com/search?keyword=埃及外长呼吁保护巴勒斯坦平民生命)
-1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
-1. [飞机滑行时孩子起立家长被空姐教育](https://so.toutiao.com/search?keyword=飞机滑行时孩子起立家长被空姐教育)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
 1. [武汉江汉区政协原主席许华被查](https://so.toutiao.com/search?keyword=武汉江汉区政协原主席许华被查)
 1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
 1. [第二例接受猪心脏移植者去世](https://so.toutiao.com/search?keyword=第二例接受猪心脏移植者去世)
-1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
-1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
-1. [身高1米45嫌犯潜逃照片公布](https://so.toutiao.com/search?keyword=身高1米45嫌犯潜逃照片公布)
 1. [约旦建议本国公民暂勿前往黎巴嫩](https://so.toutiao.com/search?keyword=约旦建议本国公民暂勿前往黎巴嫩)
-1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
 1. [男子操作失误被追尾与后车同责](https://so.toutiao.com/search?keyword=男子操作失误被追尾与后车同责)
 1. [WTT法兰克福冠军赛：王楚钦晋级8强](https://so.toutiao.com/search?keyword=WTT法兰克福冠军赛：王楚钦晋级8强)
 1. [国际油价11月1日下跌](https://so.toutiao.com/search?keyword=国际油价11月1日下跌)
-1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
 1. [网传部分用户将学校挂上闲鱼](https://so.toutiao.com/search?keyword=网传部分用户将学校挂上闲鱼)
 1. [洪秀柱：愿望是两岸尽快和平统一](https://so.toutiao.com/search?keyword=洪秀柱：愿望是两岸尽快和平统一)
 1. [年轻教师与曾经的老师成为了同事](https://so.toutiao.com/search?keyword=年轻教师与曾经的老师成为了同事)
-1. [外媒民调梅西是否是历史最佳球员](https://so.toutiao.com/search?keyword=外媒民调梅西是否是历史最佳球员)
-1. [专家称这些家庭容易培养出霸凌者](https://so.toutiao.com/search?keyword=专家称这些家庭容易培养出霸凌者)
 1. [约旦国王访问阿联酋](https://so.toutiao.com/search?keyword=约旦国王访问阿联酋)
 1. [布达拉宫明年3月15日前免费参观](https://so.toutiao.com/search?keyword=布达拉宫明年3月15日前免费参观)
 1. [河南通报“农村立火聚餐就要办证”](https://so.toutiao.com/search?keyword=河南通报“农村立火聚餐就要办证”)
@@ -60,7 +85,6 @@
 1. [湖北大学回应情侣校园内被人骚扰](https://so.toutiao.com/search?keyword=湖北大学回应情侣校园内被人骚扰)
 1. [刘震云：指手画脚是知识不够的表现](https://so.toutiao.com/search?keyword=刘震云：指手画脚是知识不够的表现)
 1. [怎么看上海万圣节中国化现象](https://so.toutiao.com/search?keyword=怎么看上海万圣节中国化现象)
-1. [以军回应空袭难民营：他们自己不走](https://so.toutiao.com/search?keyword=以军回应空袭难民营：他们自己不走)
 1. [女老师留遗书自杀前一天疑遭校长批评](https://so.toutiao.com/search?keyword=女老师留遗书自杀前一天疑遭校长批评)
 1. [外媒：哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=外媒：哈马斯发布“地道作战”视频)
 1. [也门胡塞武装：将继续对以发动袭击](https://so.toutiao.com/search?keyword=也门胡塞武装：将继续对以发动袭击)
@@ -149,7 +173,6 @@
 1. [约旦援助物资已抵达约旦河西岸城市](https://so.toutiao.com/search?keyword=约旦援助物资已抵达约旦河西岸城市)
 1. [吉林多地迎初雪](https://so.toutiao.com/search?keyword=吉林多地迎初雪)
 1. [2022我国孕产妇死亡率降至历史最低](https://so.toutiao.com/search?keyword=2022我国孕产妇死亡率降至历史最低)
-1. [赖清德嘲“蓝白合”遭谢寒冰反讽](https://so.toutiao.com/search?keyword=赖清德嘲“蓝白合”遭谢寒冰反讽)
 1. [岸田访问菲律宾打的什么“小算盘”](https://so.toutiao.com/search?keyword=岸田访问菲律宾打的什么“小算盘”)
 1. [媒体：揭开赖清德的伪装网](https://so.toutiao.com/search?keyword=媒体：揭开赖清德的伪装网)
 1. [台军：解放军37架军机飞越巴士海峡](https://so.toutiao.com/search?keyword=台军：解放军37架军机飞越巴士海峡)
@@ -162,7 +185,6 @@
 1. [中国金融业改革开放“新新”向荣](https://so.toutiao.com/search?keyword=中国金融业改革开放“新新”向荣)
 1. [以军在加沙隧道内与哈马斯交战](https://so.toutiao.com/search?keyword=以军在加沙隧道内与哈马斯交战)
 1. [俄国防部：击落39架乌克兰无人机](https://so.toutiao.com/search?keyword=俄国防部：击落39架乌克兰无人机)
-1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
 1. [“新一轮房改”来了？专家解读](https://so.toutiao.com/search?keyword=“新一轮房改”来了？专家解读)
 1. [商务部谈设立新疆自贸区](https://so.toutiao.com/search?keyword=商务部谈设立新疆自贸区)
 1. [交警追赶摩托车致2死？镇政府回应](https://so.toutiao.com/search?keyword=交警追赶摩托车致2死？镇政府回应)
