--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,56 +1,82 @@
 # 2023-11-02
 
-共 197 条
+共 222 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 13:00:35 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 14:01:25 GMT+0800 (China Standard Time) -->
 1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
-1. [主持人评村民抢药材：损失谁来负](https://so.toutiao.com/search?keyword=主持人评村民抢药材：损失谁来负)
+1. [骑行队伍中最快的是二八大杠](https://so.toutiao.com/search?keyword=骑行队伍中最快的是二八大杠)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
+1. [主持人评村民抢药材：损失谁来负](https://so.toutiao.com/search?keyword=主持人评村民抢药材：损失谁来负)
+1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
+1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [女孩从200斤减到只剩50斤两进ICU](https://so.toutiao.com/search?keyword=女孩从200斤减到只剩50斤两进ICU)
+1. [谁是33万亿美元美国国债头号债主](https://so.toutiao.com/search?keyword=谁是33万亿美元美国国债头号债主)
+1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
+1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
+1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
+1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
+1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
+1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
+1. [重大刑案嫌犯尚金勇自杀身亡](https://so.toutiao.com/search?keyword=重大刑案嫌犯尚金勇自杀身亡)
+1. [曝苹果将在印度启动iPhone 17研发](https://so.toutiao.com/search?keyword=曝苹果将在印度启动iPhone+17研发)
+1. [湖北大学情侣被骚扰事件双方已谅解](https://so.toutiao.com/search?keyword=湖北大学情侣被骚扰事件双方已谅解)
+1. [约旦国王与阿联酋总统举行会晤](https://so.toutiao.com/search?keyword=约旦国王与阿联酋总统举行会晤)
+1. [家长怒斥放号多致孩子看病等太久](https://so.toutiao.com/search?keyword=家长怒斥放号多致孩子看病等太久)
+1. [山西陵川：焚烧秸秆浓烟遮天蔽日](https://so.toutiao.com/search?keyword=山西陵川：焚烧秸秆浓烟遮天蔽日)
+1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
+1. [两人因擦碰扭打后仿佛无事发生](https://so.toutiao.com/search?keyword=两人因擦碰扭打后仿佛无事发生)
+1. [曝华为手机2-3年内会持续供应不足](https://so.toutiao.com/search?keyword=曝华为手机2-3年内会持续供应不足)
+1. [凯尔特人成东部唯一全胜球队](https://so.toutiao.com/search?keyword=凯尔特人成东部唯一全胜球队)
+1. [90后教师：“轻松”只是自己的想象](https://so.toutiao.com/search?keyword=90后教师：“轻松”只是自己的想象)
+1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
+1. [曝明年印度iPhone产能比重或将提高](https://so.toutiao.com/search?keyword=曝明年印度iPhone产能比重或将提高)
+1. [未来三天冷空气将继续影响北方地区](https://so.toutiao.com/search?keyword=未来三天冷空气将继续影响北方地区)
+1. [韩国金价创历史新高](https://so.toutiao.com/search?keyword=韩国金价创历史新高)
+1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [糖尿病家属谈治疗：1天打4遍胰岛素](https://so.toutiao.com/search?keyword=糖尿病家属谈治疗：1天打4遍胰岛素)
+1. [乌克兰承认：57万件武器丢了](https://so.toutiao.com/search?keyword=乌克兰承认：57万件武器丢了)
+1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
+1. [如何预防老年斑](https://so.toutiao.com/search?keyword=如何预防老年斑)
+1. [媒体：政策引领普惠金融提质扩面](https://so.toutiao.com/search?keyword=媒体：政策引领普惠金融提质扩面)
+1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
+1. [今年1-9月总诊疗人次数51亿](https://so.toutiao.com/search?keyword=今年1-9月总诊疗人次数51亿)
+1. [金融强国目标开启金融事业发展新局](https://so.toutiao.com/search?keyword=金融强国目标开启金融事业发展新局)
+1. [媒体：留给滕哈格的时间不多了](https://so.toutiao.com/search?keyword=媒体：留给滕哈格的时间不多了)
+1. [武校投毒案被告称不知鼠药毒性那么大](https://so.toutiao.com/search?keyword=武校投毒案被告称不知鼠药毒性那么大)
+1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
+1. [马德兴：女足亚洲杯夺冠后心态大变](https://so.toutiao.com/search?keyword=马德兴：女足亚洲杯夺冠后心态大变)
+1. [侯文任湖南永州市委副书记](https://so.toutiao.com/search?keyword=侯文任湖南永州市委副书记)
+1. [理想新车为什么要抛弃增程式](https://so.toutiao.com/search?keyword=理想新车为什么要抛弃增程式)
+1. [一宿舍多名同学相继确诊隐翅虫皮炎](https://so.toutiao.com/search?keyword=一宿舍多名同学相继确诊隐翅虫皮炎)
+1. [专家称这些家庭容易培养出霸凌者](https://so.toutiao.com/search?keyword=专家称这些家庭容易培养出霸凌者)
+1. [梅罗数据对比：金球8-5 冠军44-35](https://so.toutiao.com/search?keyword=梅罗数据对比：金球8-5+冠军44-35)
+1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
+1. [基本公共卫生服务人均财政补助89元](https://so.toutiao.com/search?keyword=基本公共卫生服务人均财政补助89元)
 1. [中国代表将“鲁班锁”送给联合国](https://so.toutiao.com/search?keyword=中国代表将“鲁班锁”送给联合国)
 1. [支原体肺炎“三件套”真的管用吗](https://so.toutiao.com/search?keyword=支原体肺炎“三件套”真的管用吗)
 1. [美加军舰过航台海 解放军全程跟监](https://so.toutiao.com/search?keyword=美加军舰过航台海+解放军全程跟监)
-1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
-1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
-1. [家长怒斥放号多致孩子看病等太久](https://so.toutiao.com/search?keyword=家长怒斥放号多致孩子看病等太久)
-1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
 1. [哈马斯称用机枪对加沙以军还击](https://so.toutiao.com/search?keyword=哈马斯称用机枪对加沙以军还击)
-1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
 1. [伊朗最高领袖就巴以冲突发声](https://so.toutiao.com/search?keyword=伊朗最高领袖就巴以冲突发声)
 1. [以军回应空袭难民营：他们自己不走](https://so.toutiao.com/search?keyword=以军回应空袭难民营：他们自己不走)
-1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
 1. [胡锡进谈教师自杀：形式主义让人疯掉](https://so.toutiao.com/search?keyword=胡锡进谈教师自杀：形式主义让人疯掉)
-1. [谁是33万亿美元美国国债头号债主](https://so.toutiao.com/search?keyword=谁是33万亿美元美国国债头号债主)
-1. [女孩从200斤减到只剩50斤两进ICU](https://so.toutiao.com/search?keyword=女孩从200斤减到只剩50斤两进ICU)
 1. [银川市委原常委李永宁被查](https://so.toutiao.com/search?keyword=银川市委原常委李永宁被查)
-1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
-1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
-1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
 1. [袁素玲任福建省莆田市委副书记](https://so.toutiao.com/search?keyword=袁素玲任福建省莆田市委副书记)
-1. [湖北大学情侣被骚扰事件双方已谅解](https://so.toutiao.com/search?keyword=湖北大学情侣被骚扰事件双方已谅解)
 1. [村委回应老人摆摊被收4000元摊位费](https://so.toutiao.com/search?keyword=村委回应老人摆摊被收4000元摊位费)
-1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
 1. [阿门·汤普森遭遇2级脚踝扭伤](https://so.toutiao.com/search?keyword=阿门·汤普森遭遇2级脚踝扭伤)
 1. [多地气温将陆续跳水](https://so.toutiao.com/search?keyword=多地气温将陆续跳水)
 1. [加州州长：美中“脱钩”不是选择](https://so.toutiao.com/search?keyword=加州州长：美中“脱钩”不是选择)
 1. [赖清德嘲“蓝白合”遭谢寒冰反讽](https://so.toutiao.com/search?keyword=赖清德嘲“蓝白合”遭谢寒冰反讽)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
-1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
 1. [阿联酋医院将收治千名巴勒斯坦儿童](https://so.toutiao.com/search?keyword=阿联酋医院将收治千名巴勒斯坦儿童)
-1. [曝华为手机2-3年内会持续供应不足](https://so.toutiao.com/search?keyword=曝华为手机2-3年内会持续供应不足)
 1. [学者：美国正推动自身“霸权更新”](https://so.toutiao.com/search?keyword=学者：美国正推动自身“霸权更新”)
 1. [外媒民调梅西是否是历史最佳球员](https://so.toutiao.com/search?keyword=外媒民调梅西是否是历史最佳球员)
-1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
 1. [游盈隆：对民进党的政治风暴已成形](https://so.toutiao.com/search?keyword=游盈隆：对民进党的政治风暴已成形)
 1. [飞机滑行时孩子起立家长被空姐教育](https://so.toutiao.com/search?keyword=飞机滑行时孩子起立家长被空姐教育)
 1. [身高1米45嫌犯潜逃照片公布](https://so.toutiao.com/search?keyword=身高1米45嫌犯潜逃照片公布)
-1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
-1. [糖尿病家属谈治疗：1天打4遍胰岛素](https://so.toutiao.com/search?keyword=糖尿病家属谈治疗：1天打4遍胰岛素)
 1. [北方多地临近立冬暖如立夏](https://so.toutiao.com/search?keyword=北方多地临近立冬暖如立夏)
 1. [郭台铭连署贿选案已有16人被收押](https://so.toutiao.com/search?keyword=郭台铭连署贿选案已有16人被收押)
-1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
 1. [“蓝白合”台立法机构负责人谁当](https://so.toutiao.com/search?keyword=“蓝白合”台立法机构负责人谁当)
-1. [专家称这些家庭容易培养出霸凌者](https://so.toutiao.com/search?keyword=专家称这些家庭容易培养出霸凌者)
 1. [佩洛西收到检方传票 涉刑事案件](https://so.toutiao.com/search?keyword=佩洛西收到检方传票+涉刑事案件)
 1. [卫健委：提高重大疫情防控应对能力](https://so.toutiao.com/search?keyword=卫健委：提高重大疫情防控应对能力)
 1. [黄金价格受巴以冲突影响暴涨](https://so.toutiao.com/search?keyword=黄金价格受巴以冲突影响暴涨)
@@ -68,7 +94,6 @@
 1. [蓝白合明天是最后期限？侯友宜表态](https://so.toutiao.com/search?keyword=蓝白合明天是最后期限？侯友宜表态)
 1. [埃及外长呼吁保护巴勒斯坦平民生命](https://so.toutiao.com/search?keyword=埃及外长呼吁保护巴勒斯坦平民生命)
 1. [武汉江汉区政协原主席许华被查](https://so.toutiao.com/search?keyword=武汉江汉区政协原主席许华被查)
-1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
 1. [第二例接受猪心脏移植者去世](https://so.toutiao.com/search?keyword=第二例接受猪心脏移植者去世)
 1. [约旦建议本国公民暂勿前往黎巴嫩](https://so.toutiao.com/search?keyword=约旦建议本国公民暂勿前往黎巴嫩)
 1. [男子操作失误被追尾与后车同责](https://so.toutiao.com/search?keyword=男子操作失误被追尾与后车同责)
