--- a/archives/zhihu-search/2023-11-02.md
+++ b/archives/zhihu-search/2023-11-02.md
@@ -1,15 +1,16 @@
 # 2023-11-02
 
-共 13 条
+共 14 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Thu Nov 02 2023 13:00:35 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 14:01:25 GMT+0800 (China Standard Time) -->
 1. [万圣节](https://www.zhihu.com/search?q=万圣节)
 1. [双十一手机推荐](https://www.zhihu.com/search?q=双十一手机推荐)
 1. [空气净化器怎么选](https://www.zhihu.com/search?q=空气净化器怎么选)
 1. [三大指数集体低开](https://www.zhihu.com/search?q=三大指数集体低开)
 1. [考研流程详解](https://www.zhihu.com/search?q=考研流程详解)
 1. [国考备考经验](https://www.zhihu.com/search?q=国考备考经验)
+1. [city work](https://www.zhihu.com/search?q=city work)
 1. [国考报名](https://www.zhihu.com/search?q=国考报名)
 1. [国考报考人数最多的岗位](https://www.zhihu.com/search?q=国考报考人数最多的岗位)
 1. [国考如何选岗](https://www.zhihu.com/search?q=国考如何选岗)
