--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,43 +1,74 @@
 # 2023-11-02
 
-共 248 条
+共 272 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 15:00:51 GMT+0800 (China Standard Time) -->
-1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
-1. [警方回应郑州一男子在马路上挥刀](https://so.toutiao.com/search?keyword=警方回应郑州一男子在马路上挥刀)
+<!-- 最后更新时间 Thu Nov 02 2023 16:00:48 GMT+0800 (China Standard Time) -->
+1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
+1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
-1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
-1. [男子钓鱼遇“街溜子”鱼冲人吐口水](https://so.toutiao.com/search?keyword=男子钓鱼遇“街溜子”鱼冲人吐口水)
+1. [现场视频：李克强同志遗体在京火化](https://so.toutiao.com/search?keyword=现场视频：李克强同志遗体在京火化)
+1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
+1. [中国女足帅位面临三种选择](https://so.toutiao.com/search?keyword=中国女足帅位面临三种选择)
 1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [证监会：打击伪私募等非法金融活动](https://so.toutiao.com/search?keyword=证监会：打击伪私募等非法金融活动)
+1. [男子钓鱼遇“街溜子”鱼冲人吐口水](https://so.toutiao.com/search?keyword=男子钓鱼遇“街溜子”鱼冲人吐口水)
+1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
+1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
+1. [老教师呼吁学校取消与教育无关任务](https://so.toutiao.com/search?keyword=老教师呼吁学校取消与教育无关任务)
+1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
+1. [以色列打响地道战就能清除哈马斯吗](https://so.toutiao.com/search?keyword=以色列打响地道战就能清除哈马斯吗)
+1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
+1. [以议员观看以军遭袭惨烈画面落泪](https://so.toutiao.com/search?keyword=以议员观看以军遭袭惨烈画面落泪)
+1. [缅甸果敢民族民主同盟军谈电诈问题](https://so.toutiao.com/search?keyword=缅甸果敢民族民主同盟军谈电诈问题)
+1. [身高1米45命案在逃嫌疑人已自杀](https://so.toutiao.com/search?keyword=身高1米45命案在逃嫌疑人已自杀)
+1. [男子鞋底藏90万元金条闯关步伐露馅](https://so.toutiao.com/search?keyword=男子鞋底藏90万元金条闯关步伐露馅)
+1. [主持人评村民抢药材：损失谁来负](https://so.toutiao.com/search?keyword=主持人评村民抢药材：损失谁来负)
+1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
+1. [两人因擦碰扭打后仿佛无事发生](https://so.toutiao.com/search?keyword=两人因擦碰扭打后仿佛无事发生)
+1. [大学生情侣在学校晚会唱歌官宣分手](https://so.toutiao.com/search?keyword=大学生情侣在学校晚会唱歌官宣分手)
+1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
+1. [男孩点燃居民房路边杂物](https://so.toutiao.com/search?keyword=男孩点燃居民房路边杂物)
+1. [联合国秘书长谴责袭击加沙难民营](https://so.toutiao.com/search?keyword=联合国秘书长谴责袭击加沙难民营)
+1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
+1. [“新一轮房改”来了？专家解读](https://so.toutiao.com/search?keyword=“新一轮房改”来了？专家解读)
+1. [主人跳皮筋 狗狗和马儿当工具人](https://so.toutiao.com/search?keyword=主人跳皮筋+狗狗和马儿当工具人)
+1. [山东将有大风天气](https://so.toutiao.com/search?keyword=山东将有大风天气)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [深交所：终止福华化学上市审核](https://so.toutiao.com/search?keyword=深交所：终止福华化学上市审核)
+1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
+1. [暖心版公主请上车](https://so.toutiao.com/search?keyword=暖心版公主请上车)
+1. [福华化学撤回发行上市申请](https://so.toutiao.com/search?keyword=福华化学撤回发行上市申请)
+1. [黑龙江：2023秸秆还田率达68%以上](https://so.toutiao.com/search?keyword=黑龙江：2023秸秆还田率达68%以上)
+1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
+1. [呼和浩特发布最新人事任免](https://so.toutiao.com/search?keyword=呼和浩特发布最新人事任免)
+1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
+1. [11月东北等地存低温雨雪灾害风险](https://so.toutiao.com/search?keyword=11月东北等地存低温雨雪灾害风险)
+1. [希腊总理米佐塔基斯将访华](https://so.toutiao.com/search?keyword=希腊总理米佐塔基斯将访华)
+1. [警方回应郑州一男子在马路上挥刀](https://so.toutiao.com/search?keyword=警方回应郑州一男子在马路上挥刀)
+1. [媒体：给学生减负也要给教师减负](https://so.toutiao.com/search?keyword=媒体：给学生减负也要给教师减负)
+1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
+1. [7个瞬间看歼-20逐梦蓝天](https://so.toutiao.com/search?keyword=7个瞬间看歼-20逐梦蓝天)
+1. [中美英等国同意合作建立AI监管方法](https://so.toutiao.com/search?keyword=中美英等国同意合作建立AI监管方法)
+1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
+1. [中外代表共议应对气候与粮食危机](https://so.toutiao.com/search?keyword=中外代表共议应对气候与粮食危机)
+1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
+1. [巴勒斯坦一青年向以军扔石块被射杀](https://so.toutiao.com/search?keyword=巴勒斯坦一青年向以军扔石块被射杀)
+1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
+1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
 1. [女子路怒和情侣起冲突 一男子被咬](https://so.toutiao.com/search?keyword=女子路怒和情侣起冲突+一男子被咬)
 1. [湖南一医院要解聘全体员工](https://so.toutiao.com/search?keyword=湖南一医院要解聘全体员工)
-1. [主持人评村民抢药材：损失谁来负](https://so.toutiao.com/search?keyword=主持人评村民抢药材：损失谁来负)
-1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
-1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
-1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
 1. [以军回应空袭难民营：他们自己不走](https://so.toutiao.com/search?keyword=以军回应空袭难民营：他们自己不走)
-1. [以议员观看以军遭袭惨烈画面落泪](https://so.toutiao.com/search?keyword=以议员观看以军遭袭惨烈画面落泪)
-1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
-1. [以色列打响地道战就能清除哈马斯吗](https://so.toutiao.com/search?keyword=以色列打响地道战就能清除哈马斯吗)
 1. [谁是33万亿美元美国国债头号债主](https://so.toutiao.com/search?keyword=谁是33万亿美元美国国债头号债主)
 1. [男子获死缓出狱再行凶 已自杀身亡](https://so.toutiao.com/search?keyword=男子获死缓出狱再行凶+已自杀身亡)
-1. [大学生情侣在学校晚会唱歌官宣分手](https://so.toutiao.com/search?keyword=大学生情侣在学校晚会唱歌官宣分手)
 1. [女孩从200斤减到只剩50斤两进ICU](https://so.toutiao.com/search?keyword=女孩从200斤减到只剩50斤两进ICU)
-1. [两人因擦碰扭打后仿佛无事发生](https://so.toutiao.com/search?keyword=两人因擦碰扭打后仿佛无事发生)
-1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
-1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
 1. [山西陵川：焚烧秸秆浓烟遮天蔽日](https://so.toutiao.com/search?keyword=山西陵川：焚烧秸秆浓烟遮天蔽日)
 1. [高校回应遭举报助学金分配不公](https://so.toutiao.com/search?keyword=高校回应遭举报助学金分配不公)
 1. [上周生猪及猪肉价格同比环比双降](https://so.toutiao.com/search?keyword=上周生猪及猪肉价格同比环比双降)
 1. [巴以冲突一旦战争外溢意味着啥](https://so.toutiao.com/search?keyword=巴以冲突一旦战争外溢意味着啥)
-1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
 1. [中国担任联合国安理会11月轮值主席](https://so.toutiao.com/search?keyword=中国担任联合国安理会11月轮值主席)
-1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
 1. [名记：被76人在机场劝返压垮了哈登](https://so.toutiao.com/search?keyword=名记：被76人在机场劝返压垮了哈登)
 1. [曝华为手机2-3年内会持续供应不足](https://so.toutiao.com/search?keyword=曝华为手机2-3年内会持续供应不足)
-1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
 1. [361名外国人经拉法口岸进入埃及](https://so.toutiao.com/search?keyword=361名外国人经拉法口岸进入埃及)
 1. [缅甸决心年内消除缅北网赌电诈](https://so.toutiao.com/search?keyword=缅甸决心年内消除缅北网赌电诈)
 1. [医院员工回应被通知全体解聘](https://so.toutiao.com/search?keyword=医院员工回应被通知全体解聘)
@@ -47,11 +78,8 @@
 1. [大马丁：姆巴佩是对阵过的最强前锋](https://so.toutiao.com/search?keyword=大马丁：姆巴佩是对阵过的最强前锋)
 1. [吉林自然资源厅原巡视员被开除党籍](https://so.toutiao.com/search?keyword=吉林自然资源厅原巡视员被开除党籍)
 1. [易炼红与阿里巴巴新任班子座谈](https://so.toutiao.com/search?keyword=易炼红与阿里巴巴新任班子座谈)
-1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
 1. [老师殴打两名女生？校方回应](https://so.toutiao.com/search?keyword=老师殴打两名女生？校方回应)
-1. [呼和浩特发布最新人事任免](https://so.toutiao.com/search?keyword=呼和浩特发布最新人事任免)
 1. [一宿舍多名同学相继确诊隐翅虫皮炎](https://so.toutiao.com/search?keyword=一宿舍多名同学相继确诊隐翅虫皮炎)
-1. [巴勒斯坦一青年向以军扔石块被射杀](https://so.toutiao.com/search?keyword=巴勒斯坦一青年向以军扔石块被射杀)
 1. [河南通报“农村立火聚餐就要办证”](https://so.toutiao.com/search?keyword=河南通报“农村立火聚餐就要办证”)
 1. [银川厅官落马：多名共事同僚已被查](https://so.toutiao.com/search?keyword=银川厅官落马：多名共事同僚已被查)
 1. [骑行队伍中最快的是二八大杠](https://so.toutiao.com/search?keyword=骑行队伍中最快的是二八大杠)
@@ -65,9 +93,7 @@
 1. [曝明年印度iPhone产能比重或将提高](https://so.toutiao.com/search?keyword=曝明年印度iPhone产能比重或将提高)
 1. [未来三天冷空气将继续影响北方地区](https://so.toutiao.com/search?keyword=未来三天冷空气将继续影响北方地区)
 1. [韩国金价创历史新高](https://so.toutiao.com/search?keyword=韩国金价创历史新高)
-1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
 1. [乌克兰承认：57万件武器丢了](https://so.toutiao.com/search?keyword=乌克兰承认：57万件武器丢了)
-1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
 1. [如何预防老年斑](https://so.toutiao.com/search?keyword=如何预防老年斑)
 1. [媒体：政策引领普惠金融提质扩面](https://so.toutiao.com/search?keyword=媒体：政策引领普惠金融提质扩面)
 1. [今年1-9月总诊疗人次数51亿](https://so.toutiao.com/search?keyword=今年1-9月总诊疗人次数51亿)
@@ -80,7 +106,6 @@
 1. [理想新车为什么要抛弃增程式](https://so.toutiao.com/search?keyword=理想新车为什么要抛弃增程式)
 1. [专家称这些家庭容易培养出霸凌者](https://so.toutiao.com/search?keyword=专家称这些家庭容易培养出霸凌者)
 1. [梅罗数据对比：金球8-5 冠军44-35](https://so.toutiao.com/search?keyword=梅罗数据对比：金球8-5+冠军44-35)
-1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
 1. [基本公共卫生服务人均财政补助89元](https://so.toutiao.com/search?keyword=基本公共卫生服务人均财政补助89元)
 1. [中国代表将“鲁班锁”送给联合国](https://so.toutiao.com/search?keyword=中国代表将“鲁班锁”送给联合国)
 1. [支原体肺炎“三件套”真的管用吗](https://so.toutiao.com/search?keyword=支原体肺炎“三件套”真的管用吗)
@@ -236,7 +261,6 @@
 1. [中国金融业改革开放“新新”向荣](https://so.toutiao.com/search?keyword=中国金融业改革开放“新新”向荣)
 1. [以军在加沙隧道内与哈马斯交战](https://so.toutiao.com/search?keyword=以军在加沙隧道内与哈马斯交战)
 1. [俄国防部：击落39架乌克兰无人机](https://so.toutiao.com/search?keyword=俄国防部：击落39架乌克兰无人机)
-1. [“新一轮房改”来了？专家解读](https://so.toutiao.com/search?keyword=“新一轮房改”来了？专家解读)
 1. [商务部谈设立新疆自贸区](https://so.toutiao.com/search?keyword=商务部谈设立新疆自贸区)
 1. [交警追赶摩托车致2死？镇政府回应](https://so.toutiao.com/search?keyword=交警追赶摩托车致2死？镇政府回应)
 1. [世卫：加沙卫生部门正处于崩溃边缘](https://so.toutiao.com/search?keyword=世卫：加沙卫生部门正处于崩溃边缘)
